8163316: Update FX to use new gnu style java command line options
Reviewed-by: kcr